--- a/UPES3/UPES3/Views/Shared/_isLecturer.cshtml
+++ b/UPES3/UPES3/Views/Shared/_isLecturer.cshtml
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="list-group-item list-group-item-action bg-light">
-            <a href=""> Biểu Mấu</a>
+            <a href="https://drive.google.com/drive/u/0/my-drive" id="link-form" target="_blank"> Biểu Mấu</a>
         </div>
         <div class="list-group-item list-group-item-action bg-light">
             <a href="">Danh Mục Nghiên Cứu</a>
