--- a/UPES3/UPES3/Views/Shared/_isNull.cshtml
+++ b/UPES3/UPES3/Views/Shared/_isNull.cshtml
@@ -5,7 +5,7 @@
             <a href=""><i class='fas fa-pencil-alt'></i> Đăng ký Nghiên Cứu</a>
         </div>
         <div class="list-group-item list-group-item-action bg-light">
-            <a href=""><i class='fas fa-file-alt'></i> Biểu Mấu</a>
+            <a href="https://drive.google.com/drive/u/0/my-drive" id="link-form" target="_blank"><i class='fas fa-file-alt'></i> Biểu Mấu</a>
         </div>
         <div class="list-group-item list-group-item-action bg-light">
             <a href=""><i class="fa fa-table"></i> Danh Mục Nghiên Cứu</a>
