push action info

--- a/UPES3/UPES3/Views/Shared/_isLecturer.cshtml
+++ b/UPES3/UPES3/Views/Shared/_isLecturer.cshtml
@@ -13,7 +13,7 @@
         <div class="list-group-item list-group-item-action bg-light">
             <a class="nav-link dropdown-toggle" href="#" id="navbarStatemnet" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tài Khoản</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarStatemnet">
-                <a class="dropdown-item" href="#"> Thông tin cá nhân</a>
+                <a class="dropdown-item" href="/Tài-Khoản/Thông-tin"> Thông tin cá nhân</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Đổi Mật Khẩu</a>
                 <div class="dropdown-divider"></div>
